--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -11,6 +11,6 @@
     <string name="disable_for_apps">Disable for some apps</string>
     <string name="enter_internal_sd_path">Enter path to internal SD card</string>
     <string name="change_download_path">Change path to Download folder</string>
-    <string name="sdcard_full_access">Full access to SD Card</string>
+    <string name="sdcard_full_access">Full access to external SD card</string>
 
 </resources>
