--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
 
-    <string name="app_name">XInternalSD</string>
+    <string name="app_name" translatable="false">XInternalSD</string>
     <string name="app_description">Change path to internal SD card</string>
     <string name="app_settings">Settings</string>
     <string name="custom_internal_sd">Custom internal SD path</string>
