--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,10 +3,9 @@
     <string name="app_name" translatable="false">XInternalSD</string>
     <string name="app_description">Change path to internal SD card</string>
     <string name="app_settings">Settings</string>
-    <string name="custom_internal_sd">Custom internal SD path</string>
+    <string name="custom_internal_sd">Custom path to internal SD card</string>
     <string name="internal_sd_path">Path to internal SD card</string>
     <string name="enable_for_apps">Enable for some apps</string>
-    <string name="enter_package_names">Enter package names separated by comma</string>
     <string name="enable_for_all_apps">Enable for all apps</string>
     <string name="disable_for_apps">Disable for some apps</string>
     <string name="enter_internal_sd_path">Enter path to internal SD card</string>
