--- a/res/values-cs/strings.xml
+++ b/res/values-cs/strings.xml
@@ -8,7 +8,7 @@
     <string name="enable_for_all_apps">Povolit pro všechny aplikace</string>
     <string name="disable_for_apps">Zakázat pro některé aplikace</string>
     <string name="enter_internal_sd_path">Zadejte cestu k interní kartě SD</string>
-    <string name="change_download_path">Změnit cestu ke složce Stahování</string>
+    <string name="change_download_path">Změnit cestu ke složce pro stahování</string>
     <string name="sdcard_full_access">Plný přístup ke externí kartě SD</string>
 
 </resources>
