--- a/res/values-sk/strings.xml
+++ b/res/values-sk/strings.xml
@@ -8,7 +8,8 @@
     <string name="enable_for_all_apps">Povoliť pre všetky aplikácie</string>
     <string name="disable_for_apps">Zakázať pre niektoré aplikácie</string>
     <string name="enter_internal_sd_path">Zadajte cestu k internej karte SD</string>
-    <string name="change_download_path">Zmeniť cestu k priečinku pre sťahovania</string>
+    <string name="change_download_path">Zmeniť cestu k priečinku Download</string>
     <string name="sdcard_full_access">Plný prístup ku externej karte SD</string>
+    <string name="include_system_apps">Zahrnúť systémové aplikácie</string>
 
 </resources>
