--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -11,5 +11,6 @@
     <string name="enter_internal_sd_path">Enter path to internal SD card</string>
     <string name="change_download_path">Change path to Download folder</string>
     <string name="sdcard_full_access">Full access to external SD card</string>
+    <string name="include_system_apps">Include system apps</string>
 
 </resources>
