--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -8,7 +8,7 @@
     <string name="enable_for_all_apps">全てのアプリで有効化</string>
     <string name="disable_for_apps">無効にするアプリの指定</string>
     <string name="enter_internal_sd_path">内部ストレージパスを入力してください</string>
-    <string name="change_download_path">Downloadフォルダパスの変更</string>
     <string name="sdcard_full_access">外部ストレージへのフルアクセス</string>
+    <string name="include_system_apps">システムアプリを含める</string>
 
 </resources>
