--- a/res/values-sk/strings.xml
+++ b/res/values-sk/strings.xml
@@ -8,7 +8,18 @@
     <string name="enable_for_all_apps">Povoliť pre všetky aplikácie</string>
     <string name="disable_for_apps">Zakázať pre niektoré aplikácie</string>
     <string name="enter_internal_sd_path">Zadajte cestu k internej karte SD</string>
-    <string name="change_download_path">Zmeniť cestu k priečinku Download</string>
     <string name="sdcard_full_access">Plný prístup ku externej karte SD</string>
+    <string name="include_system_apps">Zahrnúť systémové aplikácie</string>
+    <string name="change_system_dirs_path">Zmeniť cestu k systémovým adresárom</string>
+    <string name="alarms">Budíky</string>
+    <string name="dcim">DCIM</string>
+    <string name="documents">Documenty</string>
+    <string name="downloads">Sťahovania</string>
+    <string name="movies">Filmy</string>
+    <string name="music">Hudba</string>
+    <string name="notifications">Oznámenia</string>
+    <string name="pictures">Obrázky</string>
+    <string name="podcasts">Podcasty</string>
+    <string name="ringtones">Zvonenia</string>
 
 </resources>
