--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -9,7 +9,18 @@
     <string name="enable_for_all_apps">Enable for all apps</string>
     <string name="disable_for_apps">Disable for some apps</string>
     <string name="enter_internal_sd_path">Enter path to internal SD card</string>
-    <string name="change_download_path">Change path to Download folder</string>
     <string name="sdcard_full_access">Full access to external SD card</string>
+    <string name="include_system_apps">Include system apps</string>
+    <string name="change_system_dirs_path">Change path to system directories</string>
+    <string name="alarms">Alarms</string>
+    <string name="dcim">DCIM</string>
+    <string name="documents">Documents</string>
+    <string name="downloads">Downloads</string>
+    <string name="movies">Movies</string>
+    <string name="music">Music</string>
+    <string name="notifications">Notifications</string>
+    <string name="pictures">Pictures</string>
+    <string name="podcasts">Podcasts</string>
+    <string name="ringtones">Ringtones</string>
 
 </resources>
