--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -9,7 +9,18 @@
     <string name="enable_for_all_apps">对所有应用启用</string>
     <string name="disable_for_apps">对某些应用禁用</string>
     <string name="enter_internal_sd_path">输入内置储存卡的路径</string>
-    <string name="change_download_path">更改路径到下载文件夹(Download)</string>
     <string name="sdcard_full_access">对外置储存卡的完整权限</string>
+    <string name="include_system_apps">包含系统应用</string>
+    <string name="change_system_dirs_path">更改路径到系统目录</string>
+    <string name="alarms">闹钟(Alarms)</string>
+    <string name="dcim">相机胶卷(DCIM)</string>
+    <string name="documents">文档(Documents)</string>
+    <string name="downloads">下载(Downloads)</string>
+    <string name="movies">电影(Movies)</string>
+    <string name="music">音乐(Music)</string>
+    <string name="notifications">通知(Notifications)</string>
+    <string name="pictures">图片(Pictures)</string>
+    <string name="podcasts">播客(Podcasts)</string>
+    <string name="ringtones">铃声(Ringtones)</string>
 
 </resources>
