--- a/res/values-sk/strings.xml
+++ b/res/values-sk/strings.xml
@@ -13,7 +13,7 @@
     <string name="change_system_dirs_path">Zmeniť cestu k systémovým adresárom</string>
     <string name="alarms">Budíky</string>
     <string name="dcim">DCIM</string>
-    <string name="documents">Documenty</string>
+    <string name="documents">Dokumenty</string>
     <string name="downloads">Sťahovania</string>
     <string name="movies">Filmy</string>
     <string name="music">Hudba</string>
