--- a/res/values-cs/strings.xml
+++ b/res/values-cs/strings.xml
@@ -4,9 +4,9 @@
     <string name="app_settings">Nastavení</string>
     <string name="custom_internal_sd">Vlastní cesta k interní kartě SD</string>
     <string name="internal_sd_path">Cesta k interní kartě SD</string>
-    <string name="enable_for_apps">Povolit pro některé aplikace</string>
+    <string name="enable_for_apps">Povolit pro aplikace</string>
     <string name="enable_for_all_apps">Povolit pro všechny aplikace</string>
-    <string name="disable_for_apps">Zakázat pro některé aplikace</string>
+    <string name="disable_for_apps">Zakázat pro aplikace</string>
     <string name="enter_internal_sd_path">Zadejte cestu k interní kartě SD</string>
     <string name="sdcard_full_access">Plný přístup ke externí kartě SD</string>
     <string name="include_system_apps">Zahrnout systémové aplikace</string>
