--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -2,11 +2,12 @@
 
     <string name="app_description">Изменяет путь к внутренней SD карте</string>
     <string name="app_settings">Настройки</string>
-    <string name="custom_internal_sd">Изменённый путь к внутренней SD карте</string>
-    <string name="internal_sd_path">Путь к внутренней SD карте</string>
+    <string name="custom_internal_sdcard_path">Изменённый путь к внутренней SD карте</string>
+    <string name="internal_sdcard_path">Путь к внутренней SD карте</string>
     <string name="enable_for_apps">Включить для приложений</string>
-    <string name="enter_internal_sd_path">Введите путь к внутренней SD карте</string>
-    <string name="sdcard_full_access">Полный доступ к внешней SD карте</string>
+    <string name="enable_for_all_apps">Включить для всех приложений</string>
+    <string name="enter_internal_sdcard_path">Введите путь к внутренней SD карте</string>
+    <string name="external_sdcard_full_access">Полный доступ к внешней SD карте</string>
     <string name="include_system_apps">Включить системные приложения</string>
 
 </resources>
