--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -2,11 +2,12 @@
 
     <string name="app_description">更改路径为内置储存卡</string>
     <string name="app_settings">设置</string>
-    <string name="custom_internal_sd">自定义内置储存卡路径</string>
-    <string name="internal_sd_path">内置储存卡路径</string>
+    <string name="custom_internal_sdcard_path">自定义内置储存卡路径</string>
+    <string name="internal_sdcard_path">内置储存卡路径</string>
     <string name="enable_for_apps">对某些应用启用</string>
-    <string name="enter_internal_sd_path">输入内置储存卡的路径</string>
-    <string name="sdcard_full_access">对外置储存卡的完整权限</string>
+    <string name="enable_for_all_apps">对所有应用启用</string>
+    <string name="enter_internal_sdcard_path">输入内置储存卡的路径</string>
+    <string name="external_sdcard_full_access">对外置储存卡的完整权限</string>
     <string name="include_system_apps">包含系统应用</string>
 
 </resources>
