--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,11 +3,12 @@
     <string name="app_name" translatable="false">XInternalSD</string>
     <string name="app_description">Change path to internal SD card</string>
     <string name="app_settings">Settings</string>
-    <string name="custom_internal_sd">Custom path to internal SD card</string>
-    <string name="internal_sd_path">Path to internal SD card</string>
+    <string name="custom_internal_sdcard_path">Custom path to internal SD card</string>
+    <string name="internal_sdcard_path">Path to internal SD card</string>
     <string name="enable_for_apps">Enable for apps</string>
-    <string name="enter_internal_sd_path">Enter path to internal SD card</string>
-    <string name="sdcard_full_access">Full access to external SD card</string>
+    <string name="enable_for_all_apps">Enable for all apps</string>
+    <string name="enter_internal_sdcard_path">Enter path to internal SD card</string>
+    <string name="external_sdcard_full_access">Full access to external SD card</string>
     <string name="include_system_apps">Include system apps</string>
 
 </resources>
