--- a/res/values-cs/strings.xml
+++ b/res/values-cs/strings.xml
@@ -6,7 +6,9 @@
     <string name="internal_sdcard_path">Cesta k interní kartě SD</string>
     <string name="enable_for_apps">Povolit pro aplikace</string>
     <string name="enable_for_all_apps">Povolit pro všechny aplikace</string>
+    <string name="disable_for_apps">Zakázat pro aplikace</string>
     <string name="enter_internal_sdcard_path">Zadejte cestu k interní kartě SD</string>
     <string name="external_sdcard_full_access">Plný přístup ke externí kartě SD</string>
     <string name="include_system_apps">Zahrnout systémové aplikace</string>
+
 </resources>
