--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -6,6 +6,7 @@
     <string name="internal_sdcard_path">変更後の内部ストレージパス</string>
     <string name="enable_for_apps">有効にするアプリの指定</string>
     <string name="enable_for_all_apps">全てのアプリで有効化</string>
+    <string name="disable_for_apps">無効にするアプリの指定</string>
     <string name="enter_internal_sdcard_path">内部ストレージパスを入力してください</string>
     <string name="external_sdcard_full_access">外部ストレージへのフルアクセス</string>
     <string name="include_system_apps">システムアプリを含める</string>
