--- a/res/values-ko/strings.xml
+++ b/res/values-ko/strings.xml
@@ -6,6 +6,7 @@
     <string name="internal_sdcard_path">변경 후의 내부 스토리지 경로</string>
     <string name="enable_for_apps">활성화 할 앱</string>
     <string name="enable_for_all_apps">모든 앱에 활성화</string>
+    <string name="disable_for_apps">비활성화 할 앱</string>
     <string name="enter_internal_sdcard_path">내부 스토리지의 경로를 입력하세요</string>
     <string name="external_sdcard_full_access">외부 스토리지 접근 권한 활성화</string>
     <string name="include_system_apps">시스템 앱 포함</string>
