--- a/res/values-sk/strings.xml
+++ b/res/values-sk/strings.xml
@@ -6,6 +6,7 @@
     <string name="internal_sdcard_path">Cesta k internej karte SD</string>
     <string name="enable_for_apps">Povoliť pre aplikácie</string>
     <string name="enable_for_all_apps">Povoliť pre všetky aplikácie</string>
+    <string name="disable_for_apps">Zakázať pre aplikácie</string>
     <string name="enter_internal_sdcard_path">Zadajte cestu k internej karte SD</string>
     <string name="external_sdcard_full_access">Plný prístup ku externej karte SD</string>
     <string name="include_system_apps">Zahrnúť systémové aplikácie</string>
