--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="internal_sdcard_path">Path to internal SD card</string>
     <string name="enable_for_apps">Enable for apps</string>
     <string name="enable_for_all_apps">Enable for all apps</string>
+    <string name="disable_for_apps">Enable for apps</string>
     <string name="enter_internal_sdcard_path">Enter path to internal SD card</string>
     <string name="external_sdcard_full_access">Full access to external SD card</string>
     <string name="include_system_apps">Include system apps</string>
