--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -10,5 +10,6 @@
     <string name="enter_internal_sdcard_path">输入内置储存卡的路径</string>
     <string name="external_sdcard_full_access">对外置储存卡的完整权限</string>
     <string name="include_system_apps">包含系统应用</string>
+    <string name="reboot_required">需要重启设备才能生效</string>
 
 </resources>
