--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -10,5 +10,6 @@
     <string name="enter_internal_sdcard_path">Введите путь к внутренней SD карте</string>
     <string name="external_sdcard_full_access">Полный доступ к внешней SD карте</string>
     <string name="include_system_apps">Включить системные приложения</string>
+    <string name="reboot_required">Для применения изменений требуется перезагрузка.</string>
 
 </resources>
