--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -10,5 +10,6 @@
     <string name="enter_internal_sdcard_path">Escriba la ruta de acceso a la tarjeta SD interna</string>
     <string name="external_sdcard_full_access">Acceso completo a la tarjeta SD externa</string>
     <string name="include_system_apps">Mostrar apps del sistema</string>
+    <string name="reboot_required">Reinicio del dispositivo es necesario para que los cambios surtan efecto.</string>
 
 </resources>
