--- a/res/values-hu/strings.xml
+++ b/res/values-hu/strings.xml
@@ -10,5 +10,6 @@
     <string name="enter_internal_sdcard_path">Adja meg a belső SD kártya útvonalát</string>
     <string name="external_sdcard_full_access">Teljes hozzáférés a Külső SD kártyán</string>
     <string name="include_system_apps">Tartalmazza a rendszer alkalmazásokat</string>
+    <string name="reboot_required"> Készülék újraindítása szükséges a változtatások életbe léptetéséhez.</string>
 
 </resources>
