--- a/res/values-ko/strings.xml
+++ b/res/values-ko/strings.xml
@@ -10,5 +10,6 @@
     <string name="enter_internal_sdcard_path">내부 스토리지의 경로를 입력하세요</string>
     <string name="external_sdcard_full_access">외부 스토리지 접근 권한 활성화</string>
     <string name="include_system_apps">시스템 앱 포함</string>
+    <string name="reboot_required">변경 사항을 적용하려면 장치 재부팅이 필요합니다.</string>
 
 </resources>
