Option to hide app icon, added package names next to app names

--- a/res/values-cs/strings.xml
+++ b/res/values-cs/strings.xml
@@ -11,5 +11,6 @@
     <string name="external_sdcard_full_access">Plný přístup ke externí kartě SD</string>
     <string name="include_system_apps">Zahrnout systémové aplikace</string>
     <string name="reboot_required">Vyžaduje se restart zařízení pro použití nového nastavení.</string>
+    <string name="show_app_icon">Zobrazit ikonu aplikace</string>
 
 </resources>
