--- a/res/values-sk/strings.xml
+++ b/res/values-sk/strings.xml
@@ -11,5 +11,6 @@
     <string name="external_sdcard_full_access">Plný prístup ku externej karte SD</string>
     <string name="include_system_apps">Zahrnúť systémové aplikácie</string>
     <string name="reboot_required">Vyžaduje sa reštart zariadenia pre použitie nového nastavenia.</string>
+    <string name="show_app_icon">Zobraziť ikonu aplikácie</string>
 
 </resources>
