--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -1,5 +1,6 @@
 <resources>
 
+    <string name="app_name" translatable="false">XInternalSD</string>
     <string name="app_description">Modifica il percorso della scheda SD</string>
     <string name="app_settings">Impostazioni</string>
     <string name="custom_internal_sdcard_path">Percorso personalizzato della scheda SD</string>
@@ -11,5 +12,6 @@
     <string name="external_sdcard_full_access">Accesso completo alla scheda SD</string>
     <string name="include_system_apps">Includi le applicazioni di sistema</string>
     <string name="reboot_required">Necessario il riavvio del dispositivo per rendere permanenti le modifiche.</string>
-
+    <string name="show_app_icon">Mostra l\'icona delle app</string>
+    
 </resources>
