--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -11,5 +11,6 @@
     <string name="external_sdcard_full_access">外部ストレージへのフルアクセス</string>
     <string name="include_system_apps">システムアプリを含める</string>
     <string name="reboot_required">変更を有効にするにはデバイスの再起動が必要です。</string>
+    <string name="show_app_icon">表示するアプリケーションアイコン</string>
 
 </resources>
