--- a/res/values-hi/strings.xml
+++ b/res/values-hi/strings.xml
@@ -11,5 +11,6 @@
     <string name="external_sdcard_full_access">बाहरी एसडी कार्ड का पूरा उपयोग</string>
     <string name="include_system_apps">सिस्टम ऐप्स शामिल</string>
     <string name="reboot_required">परिवर्तनो को लागु होने के लिए डिवाइस को रिबूट करे</string>
+    <string name="show_app_icon"> शो आवेदन आइकन</string>
 
 </resources>
