--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -11,5 +11,6 @@
     <string name="external_sdcard_full_access">Полный доступ к внешней SD карте</string>
     <string name="include_system_apps">Включить системные приложения</string>
     <string name="reboot_required">Для применения изменений требуется перезагрузка.</string>
+    <string name="show_app_icon"> Показывать значок приложения</string>
 
 </resources>
